--- a/pro24/WebContent/WEB-INF/web.xml
+++ b/pro24/WebContent/WEB-INF/web.xml
@@ -13,4 +13,16 @@
   		/WEB-INF/config/action-service.xml
   	</param-value>
   </context-param>
+  
+  	<servlet>
+		<servlet-name>action</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>action</servlet-name>
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
